--- a/desafios/d012/feito com video/pacote-d012/style.css
+++ b/desafios/d012/feito com video/pacote-d012/style.css
@@ -1,1 +1,56 @@
 @charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+    min-height: 100vh;
+    background-color: darkgray;
+}
+
+header{
+    background-color: black;
+    text-align: center;
+    color: white;
+}
+header > h1{
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+header > p{
+    padding-bottom: 50px;
+}
+footer a, header a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+footer a:hover, header a:hover{
+    text-decoration: underline;
+}
+section{
+    padding-top: 10vh;
+    padding-bottom:10vh;
+    padding-left: 30px;
+    line-height: 2em;
+}
+section.normal{
+    background-color: white;
+    color: black;
+}
+section.imagem{
+    background-color: rgb(61, 61, 61);
+    color: white;
+}
+section.imagem > p{
+    width: 400px;
+    background-color: rgba( 0 , 0 , 0 , 0.250);
+}
+footer{
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding: 10px;
+}
