--- a/desafios/d012/feito com video/pacote-d012/style.css
+++ b/desafios/d012/feito com video/pacote-d012/style.css
@@ -1,13 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
 }
 
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte-normal: 'Passion One', cursive;
+    --fonte-destaque: 'Sriracha', cursive;
+}
+
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -18,6 +29,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte-normal);
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -35,6 +48,11 @@ section{
     padding-bottom:10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte-destaque);
+    font-size: 3.5vw;
+}
+section > p{
+    padding-bottom: 2em;
 }
 section.normal{
     background-color: white;
@@ -43,10 +61,25 @@ section.normal{
 section.imagem{
     background-color: rgb(61, 61, 61);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.432);
+    background-attachment: fixed;
 }
 section.imagem > p{
-    width: 400px;
-    background-color: rgba( 0 , 0 , 0 , 0.250);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 0px black;
+}
+section#img001{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img002{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
 }
 footer{
     background-color: black;
