--- a/praticando/p002/estilo/style.css
+++ b/praticando/p002/estilo/style.css
@@ -49,7 +49,7 @@ section{
     padding-top: 15px;
     border-radius: 0px 0px 8px 8px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-
+    padding-bottom: 25px;
 }
 
 section > h2{
@@ -67,6 +67,7 @@ section > iframe{
     margin: auto;
     display: block;
     width: 600px;
+    height: 400px;
 }
 section> ol > li{
     padding: 10px;
@@ -98,4 +99,27 @@ h1#principal{
     padding: 10px; 
     color: white;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.26);
+}
+footer{
+    height: 30px;
+    background-color: #b9cf38;
+    margin-top: 20px;
+    text-align: center;
+    color: white;
+    padding-top: 5px;
+}
+footer p{
+    font-size: 1.3em;
+}
+footer a{
+    text-decoration: none;
+    color: white;
+    padding: 0px 5px 0px 5px;
+}
+footer > p > strong > a:hover{
+    text-decoration: underline;
+    background-color: black;
+    color: grey;
+    border-radius: 10px;
+    
 }
