--- a/praticando/p003/estilo/social.css
+++ b/praticando/p003/estilo/social.css
@@ -1,30 +1,34 @@
 @charset "UTF-8";
 
 *{
-    padding: 0px;
     margin: 0px;
+    padding: 0px;
+}
+body{
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    background-color: black;
+    
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     font-family: Arial, Helvetica, sans-serif;
 }
 
 ::-webkit-scrollbar{
-    width: 0px;
     height: 0px;
-}
-
-img{
-    width: 100vw;
-
+    width: 0px;
 }
 
 a{
-    display: block;
-    color: white;
     background-color: darkred;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
-    font-weight: bolder;
+    font-weight: bold;
     text-decoration: none;
+    color: white;
+    display: block;
 }
-a:hover{
-    background-color: red;
-}
+
