--- a/praticando/p005/estilo/style.css
+++ b/praticando/p005/estilo/style.css
@@ -1,7 +1,106 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+}
+:root{
+    --cor1: #e6cc39;
+    --cor2: #dec221;
+
+    --cor3: #50e1e6;
+
+    --cor4: #e622a7;
+    --cor5: #991f72;
+
+    --fonte-titulo: 'Bungee Spice', cursive;
+    --fonte-principal: 'Roboto Condensed', sans-serif;
+}
+header{
+    height: 120px;
+    width: 100vw;
+
+    background-color: var(--cor3);
+}
+header > h1{
+    font-family: var(--fonte-titulo);
+    text-align: center;
+    padding-top: 10px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.39);
+    font-size: 3vw;
+}
+header > p{
+    text-align: center;
+    font-size: 0.8em;
+    color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.507);
+    padding: 6.5px;
+}
+header a{
+    padding: 5px;
+    color: white;
+    text-decoration: none;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    margin: 3px;
+}
+header a:hover{
+    transition-duration: 0.5s;
+    background-color: #3a989b;
+    border-radius: 5px;
+}
+main{
+    background-color: var(--cor2);
+    padding: 10px;
+}
+section{
+    background-color: white;
+    width: 1100px;
+    padding-top: 5px;
+    margin: auto;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.425);
+    border-radius: 10px;
+}
+article{
+    padding: 5px;
+    margin: 0px 5px 5px 5px;
+    border: 1px solid var(--cor4);
+    border-radius: 10px;
+    background-color: var(--cor4);
+    color: white;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.568);
+    font-family: var(--fonte-principal);
+}
+article h1{
+    font-size: 2em;
+    font-weight: bold;
+    background-image: linear-gradient(to right, var(--cor5), transparent);
+    padding: 5px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+article input{
+    background-color: #d379b6;;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 10px;
+    color: white;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.514)
+}
+article label{
+    font-size: 1.3vw;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.452);
+}
+article label:hover{
+    text-decoration: underline;
+}
+article ::placeholder{
+    color: lightgrey;
+}
+article p{
+    padding: 7px;
 }
