--- a/praticando/p006/style.css
+++ b/praticando/p006/style.css
@@ -69,3 +69,15 @@ label:hover{
     text-decoration: underline;
     font-weight: normal;
 }
+p.cadastro{
+    text-align: center;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+a:hover{
+    color: purple;
+    text-decoration: underline;
+    
+}
