--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -50,7 +50,7 @@ img.seta{
     position: absolute;
     top: 50vh;
     left: 12%;
-    
+
     background-color: var(--cor5);
     background-image: url(imagens/seta-icone-feito.png);
     border-radius: 50%;
@@ -59,7 +59,7 @@ img.seta{
 }
 article.bloco1{
     position: absolute;
-    left: 25%;
+    left: 15vw;
     top: 100px;
     padding: 30px;
 
@@ -136,4 +136,22 @@ hr{
     border-color: purple;
     margin-top: 20px;
     margin-bottom: 60px;
+}
+article.video{
+    width: 75vh;
+    height: 65vh;
+    position: absolute;
+    left: 50vw;
+    top: 100px;
+}
+article.video video{
+    width: 40vw;
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px black;
+}
+article.video p{
+    font-size: bold;
+    text-align: center;
+    margin-top: 10vh;
+    
 }
