--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -31,7 +31,7 @@ body{
 }
 div.menu{
     height: 100vh;
-    width: 120px;
+    width: 9.5vw;
     position: absolute;
     top: 0%;
     left: 0%;
@@ -40,7 +40,7 @@ div.menu{
     display: block;
 }
 div.menu img{
-    width: 85px;
+    width: 6vw;
     margin: 1.8vw 0px 1.8vw 1.5vw;
     padding: 20px;
     border-color: transparent;
