--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -71,7 +71,7 @@ article.bloco1{
     border: 1px solid purple;
 }
 article.bloco1 h1{
-    font-size: 7vh;
+    font-size: 5vw;
     font-weight: bolder;
     text-decoration: underline;
     color: purple;
