--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -40,7 +40,7 @@ div.menu{
     display: block;
 }
 div.menu img{
-    width: 6vw;
+    width: 12vh;
     margin: 1.8vw 0px 1.8vw 1.5vw;
     padding: 20px;
     border-color: transparent;
