--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -23,6 +23,7 @@
     }
 body,html{
     width: 100vw;
+    min-width: 75%;
 }
 body{
     background-color: var(--cor6);
@@ -31,7 +32,7 @@ body{
 }
 div.menu{
     height: 100vh;
-    width: 9.5vw;
+    width: 6vw;
     position: absolute;
     top: 0%;
     left: 0%;
@@ -40,9 +41,9 @@ div.menu{
     display: block;
 }
 div.menu img{
-    width: 12vh;
-    margin: 1.8vw 0px 1.8vw 1.5vw;
-    padding: 20px;
+    width: 4.5vw;
+    margin: 2vw 0vw 1.5vw 1vw;
+    padding: 2vw 1vw 2vw 1vw;
     border-color: transparent;
 }
 div.menu img.icone:hover{
