--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -104,6 +104,9 @@ article.planeta img{
 article.planeta img:hover{
     padding: 3px;
     background-image: url(imagens/imagem-planeta-roxo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 39vw;
 }
 div.bloco2{
     position: absolute;
