--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -113,6 +113,7 @@ div.bloco2{
     top: 150px;
 }
 .login{
+    font-size: 1vw;
     margin: 18px 10px 10px 10px;
     padding: 5px;
     background-color: var(--cor6);
