--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
@@ -16,6 +18,8 @@
     --cor4: #990099;
     --cor5: #4D004D;
     --cor6: #0c040c;
+
+    --fonte-honey: 'Oswald', sans-serif;
 }
     ::-webkit-scrollbar{
         width: 0px;
@@ -26,7 +30,10 @@ body,html{
     min-width: 75%;
 }
 body{
-    background-color: var(--cor6);
+    background-image: url(imagens/fundo-site.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
     position: relative;
 }
@@ -63,11 +70,26 @@ img.seta{
 
     width: 30px;
 }
+div.honeycomb{
+    position: absolute;
+    top: 8vh;
+    left: 20vw;
+    width: 25vw;
+    height: 8vh;
+    background-color: var(--cor6);
+}
+div.honeycomb h1{
+    color: var(--cor4);
+    font-size: 10vh;
+    font-family: var(--fonte-honey);
+    text-shadow: 2px 2px 0px var(--cor5);
+    font-weight: bolder;
+}
 article.bloco1{
     width: 35vw;
     position: absolute;
     left: 15vw;
-    top: 10vh;
+    top: 25vh;
     padding: 30px;
 
     border-radius: 10px;
@@ -77,7 +99,6 @@ article.bloco1 h1{
     text-align: center;
     font-size: 3vw;
     font-weight: bolder;
-    text-decoration: underline;
     color: purple;
     font-family: 'Anton', sans-serif;
     text-shadow:  1px 1px 0px var(--cor1);
@@ -95,19 +116,13 @@ article.planeta{
     position: absolute;
     width: 37.5vw;
 
-    top: 10vh;
+    top: 30vh;
     left: 52.5vw;
 }
 article.planeta img{
     width: 37.5vw;
 }
-article.planeta img:hover{
-    padding: 3px; 
-    background-image: url(imagens/imagem-planeta-roxo.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 37.5vw;
-}
+
 div.bloco2{
     position: absolute;
     top: 150px;
@@ -187,5 +202,11 @@ article.video p{
     font-size: bold;
     text-align: center;
     margin-top: 10vh;
-
+}
+article.assinatura img{
+    width: 10vh;
+    position: absolute;
+    top: 93vh;
+    left: 93vw;
+    transform: translate(-50%, -50%);
 }
