--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@300&display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
@@ -19,7 +21,8 @@
     --cor5: #4D004D;
     --cor6: #0c040c;
 
-    --fonte-honey: 'Oswald', sans-serif;
+    --fonte-principal: 'Oswald', sans-serif;
+    --fonte-honey: 'Anton', sans-serif;
 }
     ::-webkit-scrollbar{
         width: 0px;
