--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -120,6 +120,7 @@ article.bloco1 label{
 article.planeta{
     position: absolute;
     width: 37.5vw;
+    height: -30vh;
 
     top: 30vh;
     left: 52.5vw;
@@ -136,7 +137,7 @@ div.bloco2{
     font-size: 1vw;
     margin: 18px 10px 10px 10px;
     padding: 5px;
-    background-color: var(--cor6);
+    background-color: transparent;
     border-top: 0px solid black;
     border-left: 0px solid black;
     border-right: 0px solid black;
