--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -29,8 +29,9 @@
         height: 0px;
     }
 body,html{
+    height: 100%;
     width: 100vw;
-    min-width: 75%;
+    min-width: 1000px;
 }
 body{
     background-image: url(imagens/fundo-site.png);
@@ -42,7 +43,7 @@ body{
     position: relative;
 }
 div.menu{
-    height: 103vh;
+    height: 53vw;
     width: 6vw;
     position: absolute;
     top: 0%;
@@ -213,7 +214,7 @@ article.assinatura-login{
     width: 10vh;
     height: 10vh;
     position: absolute;
-    top: 60vw;
+    top: 48vw;
     left: 92vw;
     transform: translate(-50%, -50%);
     background-image: url(imagens/assinatura\ site.png);
@@ -231,99 +232,4 @@ div#frame{
 div#frame iframe{
     height: 103vh;
     width: 98vw;
-}
-/* Config página social*/
-section.posts{
-    width: 60vw;
-    height: 100%;
-    background-color: var(--cor6);
-    margin: auto;
-    border: 1px solid var(--cor5);
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 1%;
-    
-}
-div.post{
-    margin: auto;
-    border: 1px solid var(--cor5);
-    border-radius: 2%;
-    width: 50vw;
-    height: 100%;
-    margin-top: 3vw;
-    margin-bottom: 3vw;
-    box-shadow: 2px 2px 3px rgba(77, 0, 77, .500);
-    
-}
-div.post img.userfoto{
-    width: 3vw;
-    padding: 0.5vw;
-    border-radius: 50%;
-    border: 1px solid var(--cor5);
-    margin: 0.8vw;
-    display: inline;
-}
-div.post > p{
-    padding-bottom: 1.7vw;
-    margin-left: 1.7vw;
-    font-size: 1vw;
-}
-div.nomeusuario img{
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.548);
-}
-div.nomeusuario > p{
-    display: inline-block;
-    position: absolute;
-    margin-top: 1.5vw;
-    font-size: 1vw;
-    color: var(--cor4);
-}
-div.nomeusuario a{
-    text-decoration: none;
-    color: var(--cor4);
-}
-div.nomeusuario a:hover{
-    color: var(--cor3);
-}
-div.post img.imagempost{
-    margin: 1vw;
-    width: 48vw;
-    border-radius: 2%;
-    border: 1px solid var(--cor5);
-}
-article.assinatura-social{
-    width: 10vh;
-    height: 10vh;
-    position: absolute;
-    top: 98%;
-    left: 92%;
-    transform: translate(-50%, -50%);
-    background-image: url(imagens/assinatura\ site.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-div.post p.icones img{
-    width: 2vw;
-    margin: .5vw;
-}
-div.post p.icones img:hover{
-    transform: translate(-2px, -2px);
-    transition-duration: 0.3s;
-}
-#icoment{
-    background-color: var(--cor6);
-    border-radius: 5%;
-    border-top: 0px solid transparent;
-    border-left: 0px solid transparent ;
-    border-right: 0px solid transparent ;
-    border-bottom: 1px solid var(--cor5);
-    height: 4vh;
-    width: 47vw;
-    margin-left: 1.6vw;
-    margin-bottom: 5px;
-    color: white;
-}
-#icoment::placeholder{
-    color: var(--cor4);
-    font-size: 1.3vw;
 }
