--- a/praticando/p007/paginas-extra-estilos/trabalhos.css
+++ b/praticando/p007/paginas-extra-estilos/trabalhos.css
@@ -6,6 +6,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@200&display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
@@ -23,13 +25,14 @@
 
     --fonte-principal: 'Oswald', sans-serif;
     --fonte-honey: 'Anton', sans-serif;
+    --fonte-lista: 'Noto Sans Mono', monospace;
 }
     ::-webkit-scrollbar{
         width: 0px;
         height: 0px;
     }
 body,html{
-    
+    height: 100%;
     width: 100vw;
     
 }
@@ -41,4 +44,47 @@ body{
     background-attachment: fixed;
     color: white;
     position: relative;
+}
+main{
+    height: auto;
+    width: 100%;
+}
+main h1{
+    font-family: var(--fonte-honey);
+    text-align: center;
+    margin: 1vw;
+    font-size: 2vw;
+    color: var(--cor4);
+    text-shadow: 2px 2px 0px var(--cor5);
+}
+section.areadetrabalho{
+    position: absolute;
+    height: auto;
+    width: 60%;
+    left: 20vw;
+    background-color: var(--cor6);
+    border: 1px solid var(--cor5);
+    border-radius: 1%;
+    margin-top: 1.5vw;
+    margin-bottom: 3vw;
+    padding: 2vw .5vw;
+}
+div.lista{
+    list-style: inside;
+    margin: 1vw;
+    border: 1px solid var(--cor5);
+    border-radius: 1%;
+    height: auto;
+    padding: 10px;
+}
+div.lista h2{
+    font-family: var(--fonte-principal);
+    color: var(--cor4);
+    text-shadow: 2px 2px 0px var(--cor5);
+    margin: 0.5vw;
+}
+div.lista li{
+    color: var(--cor4);
+    padding: .1vw;
+    font-family: var(--fonte-lista);
 }
