--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -43,7 +43,7 @@ body{
     position: relative;
 }
 div.menu{
-    height: 53vw;
+    height: 115%;
     width: 6vw;
     position: absolute;
     top: 0%;
