--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -29,7 +29,7 @@
         height: 0px;
     }
 body,html{
-    height: 100%;
+    height: 110%;
     width: 100vw;
     min-width: 1000px;
 }
@@ -51,6 +51,7 @@ div.menu{
 
     background-color: var(--cor5); 
     display: block;
+    background-attachment: scroll;
 }
 div.menu img{
     width: 4.5vw;
@@ -92,6 +93,7 @@ div.honeycomb h1{
     font-weight: bolder;
 }
 article.bloco1{
+    height: 45vw;
     width: 35vw;
     position: absolute;
     left: 15vw;
@@ -117,6 +119,7 @@ article.bloco1 p{
 }
 article.bloco1 label{
     font-size: 1.5vw;
+    margin-left: 2vw;
 }
 article.planeta{
     position: absolute;
@@ -136,8 +139,7 @@ div.bloco2{
 }
 .login{
     font-size: 1vw;
-    margin: 18px 10px 10px 10px;
-    padding: 5px;
+    margin: 5vw 2vw 5vw 4vw;
     background-color: transparent;
     border-top: 0px solid black;
     border-left: 0px solid black;
@@ -160,7 +162,7 @@ div.bloco2{
     margin: 40px 10% 0px 10%;
     padding: 7px;
     color: white;
-    border-radius: 4px;
+    border-radius: 10px;
     background-color: purple;
     border: 1px solid var(--cor1);
     width: 25%;
@@ -214,7 +216,7 @@ article.assinatura-login{
     width: 10vh;
     height: 10vh;
     position: absolute;
-    top: 48vw;
+    top: 95%;
     left: 92vw;
     transform: translate(-50%, -50%);
     background-image: url(imagens/assinatura\ site.png);
@@ -222,7 +224,7 @@ article.assinatura-login{
     background-size: cover;
 }
 div#frame{
-    height: 112vh;
+    height: 110.9%;
     width: 90vw;
     background-color: white;
     position: absolute;
@@ -230,6 +232,6 @@ div#frame{
     left: 6vw;
 }
 div#frame iframe{
-    height: 112vh;
+    height: 100.9%;
     width: 98vw;
 }
