--- a/praticando/p007/paginas-extra-estilos/trabalhos.css
+++ b/praticando/p007/paginas-extra-estilos/trabalhos.css
@@ -18,7 +18,7 @@
     --cor1: rgb(53, 0, 53);
 
     --cor2: #D540D5;
-    --cor3: #CC00CC;
+    --cor3: #cc00cc;
     --cor4: #990099;
     --cor5: #4D004D;
     --cor6: #0c040c;
@@ -81,10 +81,13 @@ div.lista{
 }
 div.lista h2{
     font-family: var(--fonte-principal);
-    color: var(--cor4);
+    color: var(--cor6);
     text-shadow: 2px 2px 0px var(--cor5);
     margin: 0.5vw;
     font-size: 2vw;
+    background-image: linear-gradient(to right, rgba(204, 0, 204, 0.5) 20%, transparent 80%);
+    border-radius: 100px;
+    padding-left: 30px;
 }
 div.lista ul.desafios{
     columns: auto;
