--- a/praticando/p006/style.css
+++ b/praticando/p006/style.css
@@ -8,6 +8,10 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+::-webkit-scrollbar{
+    height: 0px;
+    width: 0px;
+}
 body,html{
     width: 100vw;
 }
