--- a/praticando/p007/style.css
+++ b/praticando/p007/style.css
@@ -93,7 +93,7 @@ div.honeycomb h1{
     font-weight: bolder;
 }
 article.bloco1{
-    height: 45vw;
+    height: 95vh;
     width: 35vw;
     position: absolute;
     left: 15vw;
