--- a/praticando/p008/estilos/media-query.css
+++ b/praticando/p008/estilos/media-query.css
@@ -12,14 +12,35 @@
 */
 
 @media screen and (min-width: 768px) and (max-width: 1366px){
+    *{
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+        font-family: 'Courier New', Courier, monospace;
+    }
+    :root{
+        --cor1: rgb(53, 0, 53);
+    
+        --cor2: #D540D5;
+        --cor3: #cc00cc;
+        --cor4: #990099;
+        --cor5: #4D004D;
+        --cor6: #0c040c;
+    }
     
     body{
         background-color: black;
         height: 100%;
         width: 100%;
+        background-image: url(../imagens/tela-honeycomb-mediumsize.png);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        transition: width .3s, height .3s;
+    transition-timing-function: ease;
     }
     div#menu{
-    width: 500px; 
+    width: 100px; 
     margin: 0px;
     }
     div#menu img#seta{
@@ -28,9 +49,17 @@
         padding: 0px;
         margin: 0px;
     }
-    div#menu menu#itens li{
-        margin: 20px;
-        width: 80px;
+    div#menu menu{
+        display: block;
+    }
+    div#menu menu#itens li > img{
+        margin: 25px;
+        width: 70px;
+        padding: 10px;
+        background-color: var(--cor4);
+        border: 1px solid #990099;
+        border-radius: 10px;
+        border: 2px solid var(--cor5)
     }
     
 }
