--- a/praticando/p008/estilos/media-query.css
+++ b/praticando/p008/estilos/media-query.css
@@ -37,7 +37,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         transition: width .3s, height .3s;
-    transition-timing-function: ease;
+        transition-timing-function: ease;
     }
     div#menu{
     width: 100px; 
@@ -52,7 +52,7 @@
     div#menu menu{
         display: block;
     }
-    div#menu menu#itens li > img{
+    div#menu menu#itens li > a  > img{
         margin: 25px;
         width: 70px;
         padding: 10px;
@@ -61,5 +61,63 @@
         border-radius: 10px;
         border: 2px solid var(--cor5)
     }
+
+    div#menu menu#itens li > a  > img:hover{
+        background-color: var(--cor3);
+        transition: 0.6s; 
+        transform: translate(1.5%,-1.5%);
+    }
+
+    div#frame{
+        position: absolute;
+        top: 5%;
+        left: 13%;
+        height: 92vh;
+        width: 86vw;
+    }
+
+    div#frame > iframe{
+        width: 100%;
+        height: 100%;
+        border-radius: 2px;
+        border: 1px solid var(--cor4);
+    }
+
+    div#frame ::-webkit-scrollbar{
+        width: 0px;
+        height: 0px;
+    }
     
+}
+
+@media screen and (max-width:767px) and (min-width:375px){
+    
+    
+    div#frame{
+        position: absolute;
+        top: 5%;
+        left: 22vw;
+        height: 90vh;
+        width: 70vw;
+    }
+
+    div#frame iframe{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width:374px){
+    div#frame{
+        position: absolute;
+        top: 4%;
+        left: 30%;
+        height: 92vh;
+        width: 65vw;
+    }
+    div#frame iframe{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+    }
 }
