--- a/praticando/p008/estilos/login-mq.css
+++ b/praticando/p008/estilos/login-mq.css
@@ -37,7 +37,12 @@
 
   body{
     background-color: var(--cor6);
+    background-image: url(../imagens/tela-honeycomb-fullsize.png);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
+
+ 
   
 
   @media screen and (max-width:1366px) and (min-width:768px) {
@@ -50,17 +55,65 @@
         position: absolute;
         top: 20vh;
         left: 30vw;
+        background-color: #0c040cb4;
+    }
+
+    section#login input{
+        padding: 5px;
+        margin-top: 35px;
+        color: var(--cor3);
+        background-color: var(--cor6);
+        border: 1px solid transparent;
+        border-bottom: 1px solid var(--cor4);
+        border-radius: 10px;
+    }
+
+    section#login ::placeholder{
+        color: var(--cor4);
     }
 
     section#login > label{
         color: white;
+        margin-left: 11vw;
+        color: var(--cor4);
         font-family: 'Courier New', Courier, monospace;
     }
 
     section#envio{
+        margin-left: 33%;
         position: absolute;
-        top: 10vh;
-       
+        top: 20vh;
     }
-    
+
+    input#limpar{
+        background-color: var(--cor4);
+        padding: 5px;
+        border-radius: 10px;
+        color: var(--cor4);
+        border: 2px solid var(--cor5);
+      }
+      input#enviar{
+        background-color: var(--cor4);
+        padding: 5px;
+        color: var(--cor4);
+        border-radius: 10px;
+        border: 2px solid var(--cor5);
+      }
+    p.cadastro{
+        color: var(--cor4);
+        margin-top: 75px;
+        margin-left: 35%;
+    }
+    p.esqueci{
+        color: var(--cor4);
+        margin-left: 32%;
+    }
+    p > a{
+        text-decoration: none;
+        color: var(--cor4);
+    }
+    p > a:hover{
+        color: var(--cor3);
+        text-decoration: underline;
+    }
   }
