--- a/praticando/p008/estilos/login-mq.css
+++ b/praticando/p008/estilos/login-mq.css
@@ -61,7 +61,7 @@
 
     section#login input{
         padding: 5px;
-        margin-top: 35px;
+        margin-top: 35px;;
         color: var(--cor3);
         background-color: var(--cor6);
         border: 1px solid transparent;
@@ -70,7 +70,7 @@
     }
 
     section#login section#dados input{
-        margin-left: 80px;
+        margin-left: 11.5vw;
     }
 
     section#login ::placeholder{
@@ -213,6 +213,7 @@
   @media screen and (max-width:374px) {
     section#login{
       border: 1px solid var(--cor5);
+      border-radius: 10px;
       padding: 10px;
       width: 65vw;
       position: absolute;
