--- a/praticando/p008/estilos/cadastro-mq.css
+++ b/praticando/p008/estilos/cadastro-mq.css
@@ -116,6 +116,12 @@
         font-weight: bolder;
         color: var(--cor2);
     }
+    article#sexo input{
+        width: 2vw;
+    }
+    article#sexo input#ifem{
+        margin-left: 3.5vw;
+    }
     article#sexo label{
         color: var(--cor4);
         font-size: 2.5vw;
@@ -136,6 +142,8 @@
         border-radius: 10px;
         color: var(--cor2);  
     }
+        
+    }
     section  p  {
         font-size: 3.5vw;
         text-align: center;
@@ -144,7 +152,7 @@
         text-decoration: none;
         color: var(--cor4);
     }
-}
+
 
   
   
