--- a/praticando/p008/estilos/cadastro-mq.css
+++ b/praticando/p008/estilos/cadastro-mq.css
@@ -51,6 +51,7 @@
   section{
     height: fit-content;
     width: 65vw;
+    padding: 10px;
     border: 1px solid var(--cor5);
     border-radius: 10px;
     box-shadow: 2px 2px 5px var(--cor5);
