--- a/praticando/p008/estilos/cadastro-mq.css
+++ b/praticando/p008/estilos/cadastro-mq.css
@@ -130,7 +130,7 @@
         margin-left: 5px;
     }
     article#envio{
-        margin-left: 22%;
+        margin-left: 20%;
         padding: 20px;
     }
     article#envio input{
@@ -143,7 +143,14 @@
         border-radius: 10px;
         color: var(--cor2);  
     }
-        
+    article#envio input:hover{
+        border-color: var(--cor3);
+        color: var(--cor3);
+    }
+    article#envio input:active{
+        border-color: var(--cor2);
+        color: var(--cor2);
+    }  
     }
     section  p  {
         font-size: 3.5vw;
