--- a/praticando/p008/estilos/trabalhos-mq.css
+++ b/praticando/p008/estilos/trabalhos-mq.css
@@ -38,6 +38,10 @@
       height: 100%;
       width: 100vw;
   }
+  ::-webkit-scrollbar{
+    width: 0px;
+    height: 0px;
+  }
   body{
     background-color: var(--cor6);
   }
