--- a/praticando/p013/estilo/style.css
+++ b/praticando/p013/estilo/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
+
+
 :root{
 
     --corx: #000000;
@@ -11,6 +16,7 @@
     --cor3: #D9530F;
     --cor4: #E65710;
 
+    --font-text: 'Courgette', cursive;
     
 }
 
@@ -26,18 +32,108 @@ body,html{
     height: 100vh;
 }
 
+body{
+    background-color: var(--cor1);
+}
+
+::-webkit-scrollbar{
+    height: 0px;
+    width: 0px;
+}
+
 /* Bolinha pingando */
 
 .hole{
     width: 70px;
     height: 70px;
+    
 }
 
-.baket_ball{
+.baketball{
     width: 100%;
     height: 100%;
     background-image: url(../img/bola);
-    background-position: center center;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-size: cover;
+}
+
+/* Header */
+
+header{
+    display: flex;
+    height: 150px;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000;
+}
+
+.logo{
+    width: 400px;
+    
+}
+
+/* Corpo do Site */
+
+main{
+    width: 1100px;
+    margin: auto;
+}
+
+ul{
+    list-style-type: none;
+    margin: 50px;
+    padding: 25px;
+    
+    background-color: rgba(0,0,0,0.5);
+    box-shadow: 5px 5px 5px solid black;
+}
+
+li{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid black;
+    margin: 10px;
+}
+
+#li1{
+    background-color: var(--cor4);
+}
+
+#li2{
+    flex-direction: row-reverse;
+    background-color: var(--cor2);
+}
+
+.image_body{
+    width: 300px;
+    margin: 10px;
+    box-shadow: 2px 2px 20px var(--corx);
+}
+
+#txt{
+    margin: 10px;
+    width: 450px;
+}
+
+#txt p{
+    font-family: 'Paytone One', sans-serif;
+    font-size: 2.5rem;
+    color: white;
+    text-shadow: 2px 2px 3px var(--cor0);
+}
+
+/* Botão Jogar */
+
+.button img{
+    width: 400px;
+    border-radius: 80px;
+    margin-left: 300px;
+}
+
+.button img:hover{
+    transform: translate(8px, -8px);
+    transition-duration: 0.3s;
+
 }
