--- a/praticando/p013/estilo/style.css
+++ b/praticando/p013/estilo/style.css
@@ -87,6 +87,7 @@ ul{
     list-style-type: none;
     margin: 50px;
     padding: 25px;
+    width: 1100px;
     
     background-color: rgba(0,0,0,0.5);
     box-shadow: 5px 5px 5px solid black;
@@ -158,12 +159,12 @@ footer img{
     border: 1px solid var(--cor2);
     border-radius: 1000px;
     margin-right: 10px;
-    padding: 10px;
+    padding: 5px;
 }
 
 footer p{
-    color: white;
-    font-size: 10px;
+    color: var(--cor3);
+    font-size: 12px;
 }
 
 .contatos{
@@ -175,4 +176,5 @@ footer p{
 .social{
     display: flex;
     align-items: center;
+    padding: 2px;
 }
