--- a/praticando/p013/estilo/style.css
+++ b/praticando/p013/estilo/style.css
@@ -44,17 +44,34 @@ body{
 /* Bolinha pingando */
 
 .hole{
-    width: 70px;
-    height: 70px;
-    
+   animation: pingar 0.45s alternate infinite;
+    height: 50px;
+    width: 50px;
+    background-color: transparent;
 }
 
-.baketball{
-    width: 100%;
-    height: 100%;
+@keyframes pingar{
+    from{transform: translateY(0px);}
+
+    to{transform: translateY(-30px);}
+}
+
+.basketball{
+    width: 50px;
+    height: 50px;
     background-image: url(../img/bola);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
+    animation: bounce 0s infinite;
+}
+
+@keyframes bounce{
+
+    from{transform: scaleY(1.0);}
+
+    to{transform: scaleY(0.8);}
+
 }
 
 /* Header */
